fix: header size (#33)
* fix: header size

* fix font-size of searchbox

* fix ui error

* fix horizontal scroll of entire page

--- a/renderServer/components/common/header/index.module.scss
+++ b/renderServer/components/common/header/index.module.scss
@@ -1,69 +1,72 @@
 .searchBar {
-  height: 70px;
-  border-bottom: 1px solid #06c755;
-  width: 100%;
+  height: 57px;
+  border-bottom: 1px solid #2cde86;
+  width: 100vw;
 
   .Logo {
     position: absolute;
-    font-size: 30pt;
+    font-size: 40px;
     color: #06c755;
     font-weight: 900;
     font-stretch: 300%;
-    top: 14px;
+    line-height: 57px;
     left: 20px;
+    padding-top: 3px;
+    font-family: 'Roboto', sans-serif;
   }
   .searchBox {
     position: absolute;
-    top: 16px;
+    top: 13px;
     left: 60px;
     border: 0px;
-    font-size: 24px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
     font-weight: bold;
-    width: calc((100vw - 100px) * 0.8);
-    padding: 5px;
+    width: calc(100% - 225px);
+    height: 32px;
   }
   .Erase {
     color: lightgray;
     position: absolute;
-    top: 20px;
-    right: 140px;
+    top: 16px;
+    right: 130px;
     white-space: nowrap;
   }
   .voiceSearch {
     color: #06c755;
     position: absolute;
-    top: 15px;
-    right: 75px;
+    top: 9px;
+    right: 70px;
   }
   .searchIcon {
     color: #06c755;
     position: absolute;
-    top: 15px;
+    top: 9px;
     right: 20px;
   }
 }
 .scrollMenu {
   overflow: auto;
   white-space: nowrap;
-  margin-left: 10px;
-  margin-top: 5px;
+  height: 51px;
+  font-family: 'Roboto', sans-serif;
 
   .menuhome {
     display: inline-block;
-    text-align: center;
-    padding: 15px;
+    padding: 0 15px 0 20px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 51px;
     font-weight: bold;
     color: #06c755;
   }
   .menu {
     display: inline-block;
-    text-align: center;
-    padding: 15px;
+    padding: 0 15px 0 10px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
+    line-height: 51px;
     color: black;
   }
 }
